--- a/style.css
+++ b/style.css
@@ -1,12 +1,19 @@
+body{
+  display:flex;
+  justify-content: center;
+  margin-top: 2vh;
+}
 .container {
   display: grid; 
   grid-template-columns: repeat(16, 1fr);
-  width: 100px;
 }
 
 .container div {
-  display:flex;
   height: 4.4vh;
   width: 2.5vw;
   border: solid;
+}
+
+.container>div:hover{
+  background-color: gold;
 }
