--- a/style.css
+++ b/style.css
@@ -1,19 +1,143 @@
-body{
-  display:flex;
-  justify-content: center;
-  margin-top: 2vh;
+body {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
 }
-.container {
+
+#container {
   display: grid; 
   grid-template-columns: repeat(16, 1fr);
 }
 
-.container div {
-  height: 4.4vh;
+.square {
+  height: 2.5vw;
   width: 2.5vw;
-  border: solid;
+  border:solid black;
 }
 
-.container>div:hover{
+.color {
   background-color: gold;
+}
+
+#button{
+background-color: pink;
+display: block;
+margin: 1vw;
+width: 15vw;
+height: 5vw;
+}
+
+#button-clear {
+  margin: 2vw;
+}
+
+#modal {
+display: none;
+position: fixed;
+z-index: 1;
+left: 30vw;
+top: 4vw;
+width: 40vw; 
+height: 23vh;
+background-color: plum;
+margin-bottom: 2.5vw;
+border: black solid;
+border-radius: 9px;
+box-shadow: 0vw 2.5vw 100vw 2vw greenyellow;
+}
+
+.modal-content {
+  display: flex;
+  flex: auto;
+  background-color: gainsboro;
+  margin: 8.5% 0% 0% 8.5%;
+  height: 50%;
+  width: 80%;
+  padding: 5px;
+  border: solid black;
+  border-radius: 9px;
+  justify-content:space-evenly;
+}
+
+.form-container {
+  display: flex;
+  flex: 0 1 auto;
+  flex-flow: column wrap;
+  justify-content: space-around;
+  padding-right: 37%;
+}
+
+input, label {
+  display: flex;
+  flex: 0 1 auto;
+  border-radius: 6.5px; 
+   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+ }
+ input {
+  width: 6.5vw;
+  margin-top 7.5%;
+  padding-left: 3%;
+ }
+ label, button {
+  font-weight: 700;
+ }
+ 
+ #container>.square:hover{
+   background-color: gold;
+ }
+
+.close {
+  padding-top: 0%;
+  padding-right: 10px;
+  color : rgba(50,50,50);
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+#submit {
+  display: flex;
+  flex: 0 1 30%;
+  max-height: 50px;
+  max-width: 65px;
+  align-self: end;
+  margin-bottom: 1%;
+  margin-right: 0.75%;
+}
+
+@media only screen and (max-width: 600px) {
+  .modal-content p {
+    font-size: 10px;
+  }
+  .modal {
+    width: 100%;
+    height: 100%;
+  }
+  .close {
+    font-size: 14px;
+  }
+  input {
+    padding: 5% 10%;
+    margin: 6% 4% 7% 11%;
+  }
+  label, input, #submit {
+    font-size: 9.5px;
+  }
+  input {
+    max-width: 15%;
+    max-height: 4%;
+    margin-top: 2%;
+  }
+  .form-container {
+    display: block;
+    margin: 0%;
+    padding: 0%;
+  }
 }
